src/test/deca/syntax/invalid/testPrint.deca
// test a print statement without the semi-colon at the end
// Result : Error
{
    print("Invalid")
}
